--- a/notebooks/transformer_nflows.ipynb
+++ b/notebooks/transformer_nflows.ipynb
@@ -33,10 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "os.chdir(r'../../vits2_pytorch')\n",
+    "\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch.nn import functional as F\n",
@@ -46,8 +58,7 @@
     "\n",
     "import commons\n",
     "from commons import init_weights, get_padding\n",
-    "import os\n",
-    "os.chdir(r'..\\vits2_pytorch')\n",
+    "\n",
     "from models import SynthesizerTrn\n",
     "import modules\n",
     "from modules import *\n",
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +184,7 @@
     "    def forward(self, x, x_mask, g=None, reverse=False):\n",
     "        x0, x1 = torch.split(x, [self.half_channels] * 2, 1)\n",
     "        x0_ = self.pre_transformer(x0 * x_mask, x_mask) #vits2\n",
+    "        x0_ = x0_ + x0 #vits2\n",
     "        h = self.pre(x0_) * x_mask #changed from x0 to x0_ to retain x0 for the flow\n",
     "        h = self.enc(h, x_mask, g=g)\n",
     "        h = self.post_transformer(h, x_mask) #vits2\n",
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +239,7 @@
        "tensor(True)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
