spk_cond_text_Encoder
- added backward compatible encoder conditioned on speaker
- used linear projection for initial version

--- a/notebooks/spk_conditioned_text_enc.ipynb
+++ b/notebooks/spk_conditioned_text_enc.ipynb
@@ -29,12 +29,141 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# there are several ways to add speaker info to the transformer layer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir(r'../../vits2_pytorch')\n",
+    "\n",
+    "from torch import nn\n",
+    "\n",
+    "from modules import LayerNorm\n",
+    "from attentions import MultiHeadAttention, FFN\n",
+    "\n",
+    "class Encoder(nn.Module):\n",
+    "  def __init__(\n",
+    "      self, hidden_channels, filter_channels, n_heads, n_layers, kernel_size=1, p_dropout=0., window_size=4, **kwargs\n",
+    "      ):\n",
+    "    super().__init__()\n",
+    "    self.hidden_channels = hidden_channels\n",
+    "    self.filter_channels = filter_channels\n",
+    "    self.n_heads = n_heads\n",
+    "    self.n_layers = n_layers\n",
+    "    self.kernel_size = kernel_size\n",
+    "    self.p_dropout = p_dropout\n",
+    "    self.window_size = window_size\n",
+    "\n",
+    "    self.drop = nn.Dropout(p_dropout)\n",
+    "    self.attn_layers = nn.ModuleList()\n",
+    "    self.norm_layers_1 = nn.ModuleList()\n",
+    "    self.ffn_layers = nn.ModuleList()\n",
+    "    self.norm_layers_2 = nn.ModuleList()\n",
+    "    # if kwargs has spk_emb_dim, then add a linear layer to project spk_emb_dim to hidden_channels\n",
+    "    if 'gin_channels' in kwargs:\n",
+    "      self.gin_channels = kwargs['gin_channels']\n",
+    "      self.spk_emb_linear = nn.Linear(self.gin_channels, self.hidden_channels)\n",
+    "      # vits2 says 3rd block, so idx is 2 by default\n",
+    "      self.cond_layer_idx = kwargs['cond_layer_idx'] if 'cond_layer_idx' in kwargs else 2\n",
+    "      print(self.gin_channels, self.cond_layer_idx)\n",
+    "      assert self.cond_layer_idx < self.n_layers, 'cond_layer_idx should be less than n_layers'\n",
+    "      \n",
+    "    for i in range(self.n_layers):\n",
+    "      self.attn_layers.append(MultiHeadAttention(hidden_channels, hidden_channels, n_heads, p_dropout=p_dropout, window_size=window_size))\n",
+    "      self.norm_layers_1.append(LayerNorm(hidden_channels))\n",
+    "      self.ffn_layers.append(FFN(hidden_channels, hidden_channels, filter_channels, kernel_size, p_dropout=p_dropout))\n",
+    "      self.norm_layers_2.append(LayerNorm(hidden_channels))\n",
+    "\n",
+    "  def forward(self, x, x_mask, g=None):\n",
+    "    attn_mask = x_mask.unsqueeze(2) * x_mask.unsqueeze(-1)\n",
+    "    x = x * x_mask\n",
+    "    for i in range(self.n_layers):\n",
+    "      if i == self.cond_layer_idx and g is not None:\n",
+    "        g = self.spk_emb_linear(g.transpose(1, 2))\n",
+    "        g = g.transpose(1, 2)\n",
+    "        x = x + g\n",
+    "      y = self.attn_layers[i](x, x, attn_mask)\n",
+    "      y = self.drop(y)\n",
+    "      x = self.norm_layers_1[i](x + y)\n",
+    "\n",
+    "      y = self.ffn_layers[i](x, x_mask)\n",
+    "      y = self.drop(y)\n",
+    "      x = self.norm_layers_2[i](x + y)\n",
+    "    x = x * x_mask\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hidden_channels, filter_channels, n_heads, n_layers, kernel_size=1, p_dropout=0., window_size=4, **kwargs\n",
+    "txtEncoder = Encoder(\n",
+    "    hidden_channels=192,\n",
+    "    filter_channels=768,\n",
+    "    n_heads=2,\n",
+    "    n_layers=6,\n",
+    "    gin_channels=256,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test with random data\n",
+    "import torch\n",
+    "x = torch.randn(1, 192, 5)\n",
+    "x_mask = torch.ones(1, 1, 5)\n",
+    "g = torch.randn(1, 256, 1)\n",
+    "hidden_x = txtEncoder(x, x_mask, g)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
