- spk_encoder_updated
- made changes in models.py

--- a/notebooks/spk_conditioned_text_enc.ipynb
+++ b/notebooks/spk_conditioned_text_enc.ipynb
@@ -48,15 +48,7 @@
     }
    ],
    "source": [
-    "import os\n",
-    "os.chdir(r'../../vits2_pytorch')\n",
-    "\n",
-    "from torch import nn\n",
-    "\n",
-    "from modules import LayerNorm\n",
-    "from attentions import MultiHeadAttention, FFN\n",
-    "\n",
-    "class Encoder(nn.Module):\n",
+    "class Encoder(nn.Module): #backward compatible vits2 encoder\n",
     "  def __init__(\n",
     "      self, hidden_channels, filter_channels, n_heads, n_layers, kernel_size=1, p_dropout=0., window_size=4, **kwargs\n",
     "      ):\n",
@@ -77,11 +69,12 @@
     "    # if kwargs has spk_emb_dim, then add a linear layer to project spk_emb_dim to hidden_channels\n",
     "    if 'gin_channels' in kwargs:\n",
     "      self.gin_channels = kwargs['gin_channels']\n",
-    "      self.spk_emb_linear = nn.Linear(self.gin_channels, self.hidden_channels)\n",
-    "      # vits2 says 3rd block, so idx is 2 by default\n",
-    "      self.cond_layer_idx = kwargs['cond_layer_idx'] if 'cond_layer_idx' in kwargs else 2\n",
-    "      print(self.gin_channels, self.cond_layer_idx)\n",
-    "      assert self.cond_layer_idx < self.n_layers, 'cond_layer_idx should be less than n_layers'\n",
+    "      if self.gin_channels != 0:\n",
+    "        self.spk_emb_linear = nn.Linear(self.gin_channels, self.hidden_channels)\n",
+    "        # vits2 says 3rd block, so idx is 2 by default\n",
+    "        self.cond_layer_idx = kwargs['cond_layer_idx'] if 'cond_layer_idx' in kwargs else 2\n",
+    "        print(self.gin_channels, self.cond_layer_idx)\n",
+    "        assert self.cond_layer_idx < self.n_layers, 'cond_layer_idx should be less than n_layers'\n",
     "      \n",
     "    for i in range(self.n_layers):\n",
     "      self.attn_layers.append(MultiHeadAttention(hidden_channels, hidden_channels, n_heads, p_dropout=p_dropout, window_size=window_size))\n",
