MAS with noise scale
- updated README
- added MAS with noise
- minor clean up

--- a/notebooks/spk_conditioned_text_enc.ipynb
+++ b/notebooks/spk_conditioned_text_enc.ipynb
@@ -37,16 +37,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\ProgramData\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(r'../../vits2_pytorch')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "from modules import *\n",
+    "from attentions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class Encoder(nn.Module): #backward compatible vits2 encoder\n",
     "  def __init__(\n",
@@ -103,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,12 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test with random data\n",
-    "import torch\n",
     "x = torch.randn(1, 192, 5)\n",
     "x_mask = torch.ones(1, 1, 5)\n",
     "g = torch.randn(1, 256, 1)\n",
