duration disc alpha code
- I realized  really do not know how gans are trained. Gonna read some over the weekend.

--- a/notebooks/durations_predictor.ipynb
+++ b/notebooks/durations_predictor.ipynb
@@ -33,9 +33,9 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "class Discriminator(nn.Module):\n",
+    "class DurationDiscriminator(nn.Module):\n",
     "    def __init__(self, input_dim, hidden_dim, num_layers=2):\n",
-    "        super(Discriminator, self).__init__()\n",
+    "        super(DurationDiscriminator, self).__init__()\n",
     "        self.input_dim = input_dim\n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.num_layers = num_layers\n",
@@ -70,7 +70,7 @@
     "# Example usage:\n",
     "hidden_dim = 192  # Dimension of the hidden layer in the LSTM\n",
     "input_dim = hidden_dim + 1  # Dimension of the input representations (htext and durations combined)\n",
-    "discriminator = Discriminator(input_dim=input_dim, hidden_dim=hidden_dim)\n",
+    "discriminator = DurationDiscriminator(input_dim=input_dim, hidden_dim=hidden_dim)\n",
     "\n",
     "# Sample inputs (replace with actual data during training)\n",
     "htext = torch.randn(16, 10, 192)  # Batch size: 16, Sequence length: 10, Input dimension: 256\n",
