--- a/notebooks/spk_conditioned_text_enc.ipynb
+++ b/notebooks/spk_conditioned_text_enc.ipynb
@@ -45,9 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,6 +113,7 @@
     "      if i == self.cond_layer_idx and g is not None:\n",
     "        g = self.spk_emb_linear(g.transpose(1, 2))\n",
     "        g = g.transpose(1, 2)\n",
+    "        g = g * x_mask\n",
     "        x = x + g\n",
     "      y = self.attn_layers[i](x, x, attn_mask)\n",
     "      y = self.drop(y)\n",
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +152,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 192, 1]) torch.Size([1, 192, 5]) torch.Size([1, 1, 5])\n",
+      "tensor([[[ 1.4556,  1.4556,  1.4556,  0.0000,  0.0000],\n",
+      "         [-0.0124, -0.0124, -0.0124, -0.0000, -0.0000],\n",
+      "         [-0.7303, -0.7303, -0.7303, -0.0000, -0.0000],\n",
+      "         [-0.2559, -0.2559, -0.2559, -0.0000, -0.0000],\n",
+      "         [-0.0320, -0.0320, -0.0320, -0.0000, -0.0000],\n",
+      "         [ 1.1853,  1.1853,  1.1853,  0.0000,  0.0000],\n",
+      "         [ 1.1169,  1.1169,  1.1169,  0.0000,  0.0000],\n",
+      "         [ 0.2219,  0.2219,  0.2219,  0.0000,  0.0000],\n",
+      "         [ 0.4217,  0.4217,  0.4217,  0.0000,  0.0000],\n",
+      "         [ 0.0335,  0.0335,  0.0335,  0.0000,  0.0000],\n",
+      "         [ 0.2335,  0.2335,  0.2335,  0.0000,  0.0000],\n",
+      "         [-0.5601, -0.5601, -0.5601, -0.0000, -0.0000],\n",
+      "         [-0.5049, -0.5049, -0.5049, -0.0000, -0.0000],\n",
+      "         [-0.3032, -0.3032, -0.3032, -0.0000, -0.0000],\n",
+      "         [ 0.0727,  0.0727,  0.0727,  0.0000,  0.0000],\n",
+      "         [-1.2421, -1.2421, -1.2421, -0.0000, -0.0000],\n",
+      "         [-0.0110, -0.0110, -0.0110, -0.0000, -0.0000],\n",
+      "         [-0.6601, -0.6601, -0.6601, -0.0000, -0.0000],\n",
+      "         [ 0.2729,  0.2729,  0.2729,  0.0000,  0.0000],\n",
+      "         [ 1.1009,  1.1009,  1.1009,  0.0000,  0.0000],\n",
+      "         [-0.2897, -0.2897, -0.2897, -0.0000, -0.0000],\n",
+      "         [-0.1750, -0.1750, -0.1750, -0.0000, -0.0000],\n",
+      "         [ 0.2186,  0.2186,  0.2186,  0.0000,  0.0000],\n",
+      "         [ 0.5052,  0.5052,  0.5052,  0.0000,  0.0000],\n",
+      "         [ 1.0453,  1.0453,  1.0453,  0.0000,  0.0000],\n",
+      "         [ 0.7097,  0.7097,  0.7097,  0.0000,  0.0000],\n",
+      "         [-1.4217, -1.4217, -1.4217, -0.0000, -0.0000],\n",
+      "         [ 0.6760,  0.6760,  0.6760,  0.0000,  0.0000],\n",
+      "         [-0.6444, -0.6444, -0.6444, -0.0000, -0.0000],\n",
+      "         [ 0.2701,  0.2701,  0.2701,  0.0000,  0.0000],\n",
+      "         [ 0.3594,  0.3594,  0.3594,  0.0000,  0.0000],\n",
+      "         [-0.0861, -0.0861, -0.0861, -0.0000, -0.0000],\n",
+      "         [-1.6013, -1.6013, -1.6013, -0.0000, -0.0000],\n",
+      "         [ 1.5284,  1.5284,  1.5284,  0.0000,  0.0000],\n",
+      "         [-0.5202, -0.5202, -0.5202, -0.0000, -0.0000],\n",
+      "         [-0.5138, -0.5138, -0.5138, -0.0000, -0.0000],\n",
+      "         [-0.5175, -0.5175, -0.5175, -0.0000, -0.0000],\n",
+      "         [ 1.4446,  1.4446,  1.4446,  0.0000,  0.0000],\n",
+      "         [-0.4554, -0.4554, -0.4554, -0.0000, -0.0000],\n",
+      "         [ 0.1863,  0.1863,  0.1863,  0.0000,  0.0000],\n",
+      "         [ 0.7599,  0.7599,  0.7599,  0.0000,  0.0000],\n",
+      "         [ 1.5499,  1.5499,  1.5499,  0.0000,  0.0000],\n",
+      "         [ 0.0622,  0.0622,  0.0622,  0.0000,  0.0000],\n",
+      "         [-0.5774, -0.5774, -0.5774, -0.0000, -0.0000],\n",
+      "         [ 0.1127,  0.1127,  0.1127,  0.0000,  0.0000],\n",
+      "         [ 1.6592,  1.6592,  1.6592,  0.0000,  0.0000],\n",
+      "         [-0.4443, -0.4443, -0.4443, -0.0000, -0.0000],\n",
+      "         [ 0.7274,  0.7274,  0.7274,  0.0000,  0.0000],\n",
+      "         [-0.0461, -0.0461, -0.0461, -0.0000, -0.0000],\n",
+      "         [ 0.5378,  0.5378,  0.5378,  0.0000,  0.0000],\n",
+      "         [ 0.1884,  0.1884,  0.1884,  0.0000,  0.0000],\n",
+      "         [-0.2671, -0.2671, -0.2671, -0.0000, -0.0000],\n",
+      "         [ 0.2181,  0.2181,  0.2181,  0.0000,  0.0000],\n",
+      "         [-0.0796, -0.0796, -0.0796, -0.0000, -0.0000],\n",
+      "         [ 0.5230,  0.5230,  0.5230,  0.0000,  0.0000],\n",
+      "         [ 1.1831,  1.1831,  1.1831,  0.0000,  0.0000],\n",
+      "         [-1.0504, -1.0504, -1.0504, -0.0000, -0.0000],\n",
+      "         [-0.2382, -0.2382, -0.2382, -0.0000, -0.0000],\n",
+      "         [ 0.2647,  0.2647,  0.2647,  0.0000,  0.0000],\n",
+      "         [-0.4342, -0.4342, -0.4342, -0.0000, -0.0000],\n",
+      "         [-0.3640, -0.3640, -0.3640, -0.0000, -0.0000],\n",
+      "         [-0.3366, -0.3366, -0.3366, -0.0000, -0.0000],\n",
+      "         [-0.0056, -0.0056, -0.0056, -0.0000, -0.0000],\n",
+      "         [-0.8363, -0.8363, -0.8363, -0.0000, -0.0000],\n",
+      "         [-0.2787, -0.2787, -0.2787, -0.0000, -0.0000],\n",
+      "         [-0.5798, -0.5798, -0.5798, -0.0000, -0.0000],\n",
+      "         [ 0.0974,  0.0974,  0.0974,  0.0000,  0.0000],\n",
+      "         [-1.0075, -1.0075, -1.0075, -0.0000, -0.0000],\n",
+      "         [ 0.5189,  0.5189,  0.5189,  0.0000,  0.0000],\n",
+      "         [ 0.5128,  0.5128,  0.5128,  0.0000,  0.0000],\n",
+      "         [-0.2415, -0.2415, -0.2415, -0.0000, -0.0000],\n",
+      "         [ 0.1699,  0.1699,  0.1699,  0.0000,  0.0000],\n",
+      "         [-0.7837, -0.7837, -0.7837, -0.0000, -0.0000],\n",
+      "         [-0.1796, -0.1796, -0.1796, -0.0000, -0.0000],\n",
+      "         [-0.1745, -0.1745, -0.1745, -0.0000, -0.0000],\n",
+      "         [ 1.0089,  1.0089,  1.0089,  0.0000,  0.0000],\n",
+      "         [-0.0741, -0.0741, -0.0741, -0.0000, -0.0000],\n",
+      "         [ 0.0959,  0.0959,  0.0959,  0.0000,  0.0000],\n",
+      "         [-0.1645, -0.1645, -0.1645, -0.0000, -0.0000],\n",
+      "         [-0.0600, -0.0600, -0.0600, -0.0000, -0.0000],\n",
+      "         [-0.1316, -0.1316, -0.1316, -0.0000, -0.0000],\n",
+      "         [-0.0788, -0.0788, -0.0788, -0.0000, -0.0000],\n",
+      "         [ 0.4508,  0.4508,  0.4508,  0.0000,  0.0000],\n",
+      "         [-0.0262, -0.0262, -0.0262, -0.0000, -0.0000],\n",
+      "         [ 0.5718,  0.5718,  0.5718,  0.0000,  0.0000],\n",
+      "         [ 0.3772,  0.3772,  0.3772,  0.0000,  0.0000],\n",
+      "         [ 0.1626,  0.1626,  0.1626,  0.0000,  0.0000],\n",
+      "         [-0.5537, -0.5537, -0.5537, -0.0000, -0.0000],\n",
+      "         [-0.7158, -0.7158, -0.7158, -0.0000, -0.0000],\n",
+      "         [ 0.5927,  0.5927,  0.5927,  0.0000,  0.0000],\n",
+      "         [-0.0089, -0.0089, -0.0089, -0.0000, -0.0000],\n",
+      "         [-0.8524, -0.8524, -0.8524, -0.0000, -0.0000],\n",
+      "         [-0.1650, -0.1650, -0.1650, -0.0000, -0.0000],\n",
+      "         [ 0.0699,  0.0699,  0.0699,  0.0000,  0.0000],\n",
+      "         [-0.3221, -0.3221, -0.3221, -0.0000, -0.0000],\n",
+      "         [ 0.4157,  0.4157,  0.4157,  0.0000,  0.0000],\n",
+      "         [ 0.5479,  0.5479,  0.5479,  0.0000,  0.0000],\n",
+      "         [ 0.1947,  0.1947,  0.1947,  0.0000,  0.0000],\n",
+      "         [ 0.1966,  0.1966,  0.1966,  0.0000,  0.0000],\n",
+      "         [ 0.3078,  0.3078,  0.3078,  0.0000,  0.0000],\n",
+      "         [-0.0584, -0.0584, -0.0584, -0.0000, -0.0000],\n",
+      "         [ 0.1123,  0.1123,  0.1123,  0.0000,  0.0000],\n",
+      "         [ 1.1167,  1.1167,  1.1167,  0.0000,  0.0000],\n",
+      "         [-1.0091, -1.0091, -1.0091, -0.0000, -0.0000],\n",
+      "         [ 0.2428,  0.2428,  0.2428,  0.0000,  0.0000],\n",
+      "         [ 0.3098,  0.3098,  0.3098,  0.0000,  0.0000],\n",
+      "         [-0.3611, -0.3611, -0.3611, -0.0000, -0.0000],\n",
+      "         [-0.3585, -0.3585, -0.3585, -0.0000, -0.0000],\n",
+      "         [-0.7717, -0.7717, -0.7717, -0.0000, -0.0000],\n",
+      "         [-0.8056, -0.8056, -0.8056, -0.0000, -0.0000],\n",
+      "         [ 0.0309,  0.0309,  0.0309,  0.0000,  0.0000],\n",
+      "         [-0.8081, -0.8081, -0.8081, -0.0000, -0.0000],\n",
+      "         [-0.0606, -0.0606, -0.0606, -0.0000, -0.0000],\n",
+      "         [ 1.6694,  1.6694,  1.6694,  0.0000,  0.0000],\n",
+      "         [ 0.6839,  0.6839,  0.6839,  0.0000,  0.0000],\n",
+      "         [-0.1162, -0.1162, -0.1162, -0.0000, -0.0000],\n",
+      "         [-0.0474, -0.0474, -0.0474, -0.0000, -0.0000],\n",
+      "         [ 0.2554,  0.2554,  0.2554,  0.0000,  0.0000],\n",
+      "         [ 0.2594,  0.2594,  0.2594,  0.0000,  0.0000],\n",
+      "         [-0.4961, -0.4961, -0.4961, -0.0000, -0.0000],\n",
+      "         [ 0.5434,  0.5434,  0.5434,  0.0000,  0.0000],\n",
+      "         [ 0.0464,  0.0464,  0.0464,  0.0000,  0.0000],\n",
+      "         [ 1.0082,  1.0082,  1.0082,  0.0000,  0.0000],\n",
+      "         [-0.0750, -0.0750, -0.0750, -0.0000, -0.0000],\n",
+      "         [-0.8552, -0.8552, -0.8552, -0.0000, -0.0000],\n",
+      "         [-0.5976, -0.5976, -0.5976, -0.0000, -0.0000],\n",
+      "         [ 0.7293,  0.7293,  0.7293,  0.0000,  0.0000],\n",
+      "         [ 0.4959,  0.4959,  0.4959,  0.0000,  0.0000],\n",
+      "         [-0.1897, -0.1897, -0.1897, -0.0000, -0.0000],\n",
+      "         [ 1.2045,  1.2045,  1.2045,  0.0000,  0.0000],\n",
+      "         [ 1.4249,  1.4249,  1.4249,  0.0000,  0.0000],\n",
+      "         [-0.5689, -0.5689, -0.5689, -0.0000, -0.0000],\n",
+      "         [-0.6562, -0.6562, -0.6562, -0.0000, -0.0000],\n",
+      "         [-0.0155, -0.0155, -0.0155, -0.0000, -0.0000],\n",
+      "         [ 0.8263,  0.8263,  0.8263,  0.0000,  0.0000],\n",
+      "         [ 0.5382,  0.5382,  0.5382,  0.0000,  0.0000],\n",
+      "         [-1.1025, -1.1025, -1.1025, -0.0000, -0.0000],\n",
+      "         [-0.4053, -0.4053, -0.4053, -0.0000, -0.0000],\n",
+      "         [-0.8861, -0.8861, -0.8861, -0.0000, -0.0000],\n",
+      "         [-0.4744, -0.4744, -0.4744, -0.0000, -0.0000],\n",
+      "         [-0.1693, -0.1693, -0.1693, -0.0000, -0.0000],\n",
+      "         [-0.1033, -0.1033, -0.1033, -0.0000, -0.0000],\n",
+      "         [ 1.2949,  1.2949,  1.2949,  0.0000,  0.0000],\n",
+      "         [ 0.6345,  0.6345,  0.6345,  0.0000,  0.0000],\n",
+      "         [ 0.4030,  0.4030,  0.4030,  0.0000,  0.0000],\n",
+      "         [ 0.5303,  0.5303,  0.5303,  0.0000,  0.0000],\n",
+      "         [-0.2230, -0.2230, -0.2230, -0.0000, -0.0000],\n",
+      "         [-0.4420, -0.4420, -0.4420, -0.0000, -0.0000],\n",
+      "         [-1.1334, -1.1334, -1.1334, -0.0000, -0.0000],\n",
+      "         [-0.1169, -0.1169, -0.1169, -0.0000, -0.0000],\n",
+      "         [-0.6862, -0.6862, -0.6862, -0.0000, -0.0000],\n",
+      "         [ 0.2543,  0.2543,  0.2543,  0.0000,  0.0000],\n",
+      "         [-0.3694, -0.3694, -0.3694, -0.0000, -0.0000],\n",
+      "         [ 0.6160,  0.6160,  0.6160,  0.0000,  0.0000],\n",
+      "         [ 0.1624,  0.1624,  0.1624,  0.0000,  0.0000],\n",
+      "         [ 0.1868,  0.1868,  0.1868,  0.0000,  0.0000],\n",
+      "         [ 0.0820,  0.0820,  0.0820,  0.0000,  0.0000],\n",
+      "         [-0.2188, -0.2188, -0.2188, -0.0000, -0.0000],\n",
+      "         [-0.2918, -0.2918, -0.2918, -0.0000, -0.0000],\n",
+      "         [ 0.3670,  0.3670,  0.3670,  0.0000,  0.0000],\n",
+      "         [ 0.1880,  0.1880,  0.1880,  0.0000,  0.0000],\n",
+      "         [ 0.4103,  0.4103,  0.4103,  0.0000,  0.0000],\n",
+      "         [ 0.2823,  0.2823,  0.2823,  0.0000,  0.0000],\n",
+      "         [-0.0933, -0.0933, -0.0933, -0.0000, -0.0000],\n",
+      "         [-0.5755, -0.5755, -0.5755, -0.0000, -0.0000],\n",
+      "         [-0.7487, -0.7487, -0.7487, -0.0000, -0.0000],\n",
+      "         [-0.2172, -0.2172, -0.2172, -0.0000, -0.0000],\n",
+      "         [ 0.1453,  0.1453,  0.1453,  0.0000,  0.0000],\n",
+      "         [ 0.0418,  0.0418,  0.0418,  0.0000,  0.0000],\n",
+      "         [-0.0443, -0.0443, -0.0443, -0.0000, -0.0000],\n",
+      "         [-0.3819, -0.3819, -0.3819, -0.0000, -0.0000],\n",
+      "         [ 0.0897,  0.0897,  0.0897,  0.0000,  0.0000],\n",
+      "         [ 0.4102,  0.4102,  0.4102,  0.0000,  0.0000],\n",
+      "         [ 1.1563,  1.1563,  1.1563,  0.0000,  0.0000],\n",
+      "         [-0.5045, -0.5045, -0.5045, -0.0000, -0.0000],\n",
+      "         [ 0.3036,  0.3036,  0.3036,  0.0000,  0.0000],\n",
+      "         [-0.5460, -0.5460, -0.5460, -0.0000, -0.0000],\n",
+      "         [ 0.1954,  0.1954,  0.1954,  0.0000,  0.0000],\n",
+      "         [-0.8418, -0.8418, -0.8418, -0.0000, -0.0000],\n",
+      "         [-0.0591, -0.0591, -0.0591, -0.0000, -0.0000],\n",
+      "         [-0.4828, -0.4828, -0.4828, -0.0000, -0.0000],\n",
+      "         [ 0.0359,  0.0359,  0.0359,  0.0000,  0.0000],\n",
+      "         [ 0.0115,  0.0115,  0.0115,  0.0000,  0.0000],\n",
+      "         [-0.2768, -0.2768, -0.2768, -0.0000, -0.0000],\n",
+      "         [-0.2443, -0.2443, -0.2443, -0.0000, -0.0000],\n",
+      "         [-0.4922, -0.4922, -0.4922, -0.0000, -0.0000],\n",
+      "         [-0.1843, -0.1843, -0.1843, -0.0000, -0.0000],\n",
+      "         [ 0.6910,  0.6910,  0.6910,  0.0000,  0.0000],\n",
+      "         [ 0.5666,  0.5666,  0.5666,  0.0000,  0.0000],\n",
+      "         [ 0.2305,  0.2305,  0.2305,  0.0000,  0.0000],\n",
+      "         [ 0.4173,  0.4173,  0.4173,  0.0000,  0.0000],\n",
+      "         [ 0.2392,  0.2392,  0.2392,  0.0000,  0.0000]]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# test with random data\n",
     "x = torch.randn(1, 192, 5)\n",
     "x_mask = torch.ones(1, 1, 5)\n",
+    "x_mask[:, :, 3:] = 0\n",
     "g = torch.randn(1, 256, 1)\n",
     "hidden_x = txtEncoder(x, x_mask, g)"
    ]
