--- a/notebooks/transformer_nflows.ipynb
+++ b/notebooks/transformer_nflows.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +156,7 @@
     "            n_layers=2,\n",
     "            kernel_size=3,\n",
     "            p_dropout=0.1,\n",
+    "            window_size=None\n",
     "            )\n",
     "        \n",
     "        self.pre = nn.Conv1d(self.half_channels, hidden_channels, 1)\n",
@@ -175,6 +176,7 @@
     "            n_layers=2,\n",
     "            kernel_size=3,\n",
     "            p_dropout=0.1,\n",
+    "            window_size=None\n",
     "            )\n",
     "        \n",
     "        self.post = nn.Conv1d(hidden_channels, self.half_channels * (2 - mean_only), 1)\n",
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +241,7 @@
        "tensor(True)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
