mel-spec post enc; readme
-mel spec notebook and train.py
-added vits config
-mentions in readme

--- a/notebooks/transformer_nflows.ipynb
+++ b/notebooks/transformer_nflows.ipynb
@@ -53,14 +53,7 @@
     "from torch import nn\n",
     "from torch.nn import functional as F\n",
     "\n",
-    "from torch.nn import Conv1d, ConvTranspose1d, AvgPool1d, Conv2d\n",
-    "from torch.nn.utils import weight_norm, remove_weight_norm\n",
-    "\n",
-    "import commons\n",
-    "from commons import init_weights, get_padding\n",
-    "\n",
     "from models import SynthesizerTrn\n",
-    "import modules\n",
     "from modules import *\n",
     "import attentions"
    ]
@@ -72,7 +65,7 @@
    "outputs": [],
    "source": [
     "n_vocab=256\n",
-    "spec_channels=80\n",
+    "spec_channels=80 # mel-spectrogram channels vits2 (vits1 used 513)\n",
     "segment_size=8192\n",
     "inter_channels=192\n",
     "hidden_channels=192\n",
