--- a/notebooks/durations_predictor.ipynb
+++ b/notebooks/durations_predictor.ipynb
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([16, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -81,11 +89,60 @@
     "\n",
     "print(output_prob.shape)  # Output shape: (batch_size, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5167],\n",
+       "        [0.5129],\n",
+       "        [0.5023],\n",
+       "        [0.5097],\n",
+       "        [0.5113],\n",
+       "        [0.5091],\n",
+       "        [0.5130],\n",
+       "        [0.5122],\n",
+       "        [0.5071],\n",
+       "        [0.5070],\n",
+       "        [0.5045],\n",
+       "        [0.5066],\n",
+       "        [0.5034],\n",
+       "        [0.5034],\n",
+       "        [0.5054],\n",
+       "        [0.5083]], grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_prob"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
