added MAS noise scale flag
- udpated train.py, train_ms.py, config files
- readme
- notebooks

--- a/notebooks/MAS_with_noise.ipynb
+++ b/notebooks/MAS_with_noise.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,11 +117,75 @@
     "plt.figure(figsize=(5, 5))\n",
     "plt.imshow(attn3[0][0].T, origin='lower')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sanity check\n",
+    "from models import SynthesizerTrn\n",
+    "net_g = SynthesizerTrn(\n",
+    "    n_vocab=256,\n",
+    "    spec_channels=80,\n",
+    "    segment_size=8192,\n",
+    "    inter_channels=192,\n",
+    "    hidden_channels=192,\n",
+    "    filter_channels=768,\n",
+    "    n_heads=2,\n",
+    "    n_layers=6,\n",
+    "    kernel_size=3,\n",
+    "    p_dropout=0.1,\n",
+    "    resblock=\"1\", \n",
+    "    resblock_kernel_sizes=[3, 7, 11],\n",
+    "    resblock_dilation_sizes=[[1, 3, 5], [1, 3, 5], [1, 3, 5]],\n",
+    "    upsample_rates=[8, 8, 2, 2],\n",
+    "    upsample_initial_channel=512,\n",
+    "    upsample_kernel_sizes=[16, 16, 4, 4],\n",
+    "    n_speakers=0,\n",
+    "    gin_channels=0,\n",
+    "    use_sdp=True,\n",
+    "    use_transformer_flows=True,\n",
+    "    use_spk_conditioned_encoder=True,\n",
+    "    use_noise_scaled_mas=True,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0.009998\n",
+      "1001 0.007998\n",
+      "2001 0.005998000000000001\n",
+      "3001 0.003998000000000001\n",
+      "4001 0.0019979999999999998\n",
+      "5001 0\n",
+      "6001 0\n",
+      "7001 0\n",
+      "8001 0\n",
+      "9001 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10000,1000):\n",
+    "    if net_g.use_noise_scaled_mas:\n",
+    "      current_mas_noise_scale = net_g.mas_noise_scale_initial - (net_g.noise_scale_delta * i)\n",
+    "      net_g.current_mas_noise_scale = max(current_mas_noise_scale, 0)\n",
+    "    print(i, net_g.current_mas_noise_scale)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -136,8 +200,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
