--- a/notebooks/durations_predictor.ipynb
+++ b/notebooks/durations_predictor.ipynb
@@ -128,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -143,8 +143,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
