--- a/notebooks/mel_spectrigram_based_enc_q.ipynb
+++ b/notebooks/mel_spectrigram_based_enc_q.ipynb
@@ -126,7 +126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -141,8 +141,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
